feat: add running animation

--- a/web/src/css/style.css
+++ b/web/src/css/style.css
@@ -11,3 +11,4 @@
 @import './components/editor.css';
 @import './components/console.css';
 @import './components/tooltip.css';
+@import './components/loader.css';
