--- a/web/src/css/components/console.css
+++ b/web/src/css/components/console.css
@@ -29,6 +29,8 @@
   height: calc(100% - 30px);
   overflow: auto;
   letter-spacing: 0.05em;
+  width: 50%;
+  float: left;
 }
 
 .console__body pre,
@@ -38,6 +40,26 @@
 }
 
 .console__body pre {
+  margin: 0;
+  padding: 0 var(--space-3x) var(--space-3x) var(--space-3x);
+}
+
+.bytecode__body {
+  max-width: 100vw;
+  height: calc(100% - 30px);
+  overflow: auto;
+  letter-spacing: 0.05em;
+  width: 50%;
+  float: right;
+}
+
+.bytecode__body pre,
+.bytecode__body code {
+  font-size: inherit;
+  font-family: var(--font-family-code);
+}
+
+.bytecode__body pre {
   margin: 0;
   padding: 0 var(--space-3x) var(--space-3x) var(--space-3x);
 }
